[gd_scene load_steps=7 format=3 uid="uid://bd117desyxv0m"]

[ext_resource type="Script" uid="uid://52aulcci13fr" path="res://Scenes/pads.gd" id="1_ip1wh"]
[ext_resource type="Material" uid="uid://5mk4lnifn57c" path="res://Scenes/PadsBlue'.tres" id="2_7o4dh"]
[ext_resource type="Material" uid="uid://el0es42ntdjq" path="res://Scenes/PadsRed.tres" id="2_y1h0p"]
[ext_resource type="Material" uid="uid://ddi5dcnpcec5" path="res://Scenes/PadsYellow.tres" id="3_esedy"]
[ext_resource type="Material" uid="uid://n17m3x17hjv2" path="res://Scenes/PadsGreen.tres" id="4_fw5ay"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vtbns"]
size = Vector3(1.1157227, 1, 1.1993408)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ip1wh")

[node name="Blu" type="CSGBox3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, 1.7670743, 0.37299326, 2.1674783)
size = Vector3(1, 0.34716797, 1)
material = ExtResource("2_7o4dh")

[node name="Yello" type="CSGBox3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, -0.45041674, 0.37299326, -0.15842223)
material_override = ExtResource("3_esedy")
size = Vector3(1, 0.34716797, 1)

[node name="Green2" type="CSGBox3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, 1.7670743, 0.37299326, -0.17704621)
size = Vector3(1, 0.34716797, 1)
material = ExtResource("4_fw5ay")

[node name="Red5" type="CSGBox3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, -0.40736943, 0.37299326, 2.1674783)
material_override = ExtResource("2_y1h0p")
size = Vector3(1, 0.34716797, 1)

[node name="Red" type="Area3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, -0.50041574, 0.16019964, 0.036547802)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Red"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.057861328, 0.1218251, 1.2051342)
shape = SubResource("BoxShape3D_vtbns")

[node name="Blue" type="Area3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, 1.7363734, 0.16019964, 0.036547802)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Blue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.057861328, 0.1218251, 1.2051342)
shape = SubResource("BoxShape3D_vtbns")

[node name="Greenb" type="Area3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, 1.7363734, 0.16019964, -2.2240467)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Greenb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.057861328, 0.1218251, 1.2051342)
shape = SubResource("BoxShape3D_vtbns")

[node name="Yellow2" type="Area3D" parent="."]
transform = Transform3D(1.7786286, 0, 0, 0, 1.7786286, 0, 0, 0, 1.7786286, -0.5071848, 0.16019964, -2.2240467)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Yellow2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.057861328, 0.1218251, 1.2051342)
shape = SubResource("BoxShape3D_vtbns")

[connection signal="body_entered" from="Red" to="." method="_on_red_body_entered"]
[connection signal="body_exited" from="Red" to="." method="_on_red_body_exited"]
[connection signal="body_entered" from="Blue" to="." method="_on_blue_body_entered"]
[connection signal="body_exited" from="Blue" to="." method="_on_blue_body_exited"]
[connection signal="body_entered" from="Greenb" to="." method="_on_greenb_body_entered"]
[connection signal="body_exited" from="Greenb" to="." method="_on_greenb_body_exited"]
[connection signal="body_entered" from="Yellow2" to="." method="_on_yellow_2_body_entered"]
[connection signal="body_exited" from="Yellow2" to="." method="_on_yellow_2_body_exited"]
